--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ Chúng ta sẽ có tiếng cười, nước mắt, sẽ nhớ, sẽ quên, sẽ 
 </li>
 </ul>
 </div>
-<p class="text-center" style="font-size: 10px">Ruanyu Jian</p>
+<p class="text-center" style="font-size: 10px">Mãi yêu 💕</p>
 <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/jquery.ui.touch-punch.min.js"></script>
